--- a/caravan/style2.css
+++ b/caravan/style2.css
@@ -1,25 +1,21 @@
-.clearfix::after {
-  content:"";
-  display:block;
-  clear:both;
+* {
+	margin: 0;
+  padding: 0;
+	box-sizing: border-box;
 }
 
-.boxes {
-	width: 600px;
-	background-color: yellow;
-	margin: 0 auto;
+header {
+	width: 10%;
 }
 
-.box1 {
-	width: 150px;
-	height: 400px;
-	background-color: orange;
-	float: left;
+header .headline {
+	font-size: 22px;
 }
 
-.box2 {
-	width: 250px;
-	height: 400px;
-	background-color: red;
-	float: right;
+.nav {
+	text-align: center;
+}
+
+.list {
+	padding-left:40px;
 }
