--- a/caravan/style.css
+++ b/caravan/style.css
@@ -7,21 +7,39 @@
 a {
   text-decoration: none;
 }
- 
+
 .clearfix::after {
   content: "";
   display: block;
   clear: both;
 }
- 
+
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
+
 header {
-  width: 100%;
+  position: relative;
+  width: 90%;
   text-align: center;
   padding: 15px 0;
+  margin: 0 auto;
 }
 header .headline{
   font-size: 32px;
 }
+
+.social {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
+
+.social i {
+  display: inline-block;
+  margin-left: 20px;
+}
+
 .nav-list {
   text-align: center;
   padding: 10px 0;
